# plants-classification

./: README.md  notebook.ipynb  requirements.txt
deployment/: main.py  pyproject.toml  requirements.txt
deployment/model/saved_model/: fingerprint.pb  saved_model.pb
saved_model/: fingerprint.pb  saved_model.pb
saved_model/variables/: variables.index
tfjs_model/: model.json
tflite/: label.txt
