[project]
name = "deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "split-folder>=0.1.1",
    "streamlit>=1.56.0",
    "streamlit-extras>=1.5.0",
    "tensorflow>=2.21.0",
]
